build issues resolved for frontend

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -52,6 +52,7 @@ steps:
       - 'us-central1'
       - '--platform'
       - 'managed'
+      - '--allow-unauthenticated'
       - '--port'
       - '8080'
       - '--service-account=dial2ai-webapp-cloudrun@dial2ai.iam.gserviceaccount.com'
@@ -72,6 +73,7 @@ steps:
       - 'us-central1'
       - '--platform'
       - 'managed'
+      - '--allow-unauthenticated'
       - '--port'
       - '3000'
       - '--service-account=dial2ai-webapp-cloudrun@dial2ai.iam.gserviceaccount.com'
